[gd_scene load_steps=11 format=2]

[ext_resource path="res://pong_paddle.png" type="Texture" id=1]
[ext_resource path="res://idealism.wav" type="AudioStream" id=2]
[ext_resource path="res://samble_tracie/Samble Tracie.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://Enemy.gd" type="Script" id=5]
[ext_resource path="res://World.gd" type="Script" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 517.948, 420.159 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 496.072, 815.045 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 15.4795, 74.8935 )

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 3 )

[node name="World" type="Node2D"]
script = ExtResource( 6 )

[node name="Background" type="ColorRect" parent="."]
margin_left = -15.0535
margin_top = -13.5481
margin_right = 1024.95
margin_bottom = 609.452
color = Color( 0.309804, 0.439216, 0.662745, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" parent="." instance=ExtResource( 4 )]
position = Vector2( 38.0624, 302.248 )

[node name="Walls" type="Node2D" parent="."]

[node name="WallTop" type="StaticBody2D" parent="Walls"]
position = Vector2( 511.352, -11.9389 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/WallTop"]
position = Vector2( 5.57226, -422.43 )
shape = SubResource( 1 )

[node name="WallBottom" type="StaticBody2D" parent="Walls"]
position = Vector2( 517.123, 597.551 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/WallBottom"]
position = Vector2( -5.79773, 432.898 )
shape = SubResource( 1 )

[node name="WallLeft" type="Area2D" parent="Walls"]
position = Vector2( -4.24554, 292.844 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/WallLeft"]
position = Vector2( -496.673, 9.6629 )
shape = SubResource( 2 )

[node name="Wallright" type="Area2D" parent="Walls"]
position = Vector2( 1023.52, 307.986 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wallright"]
position = Vector2( 490.875, -11.5955 )
shape = SubResource( 2 )

[node name="Enemy" type="KinematicBody2D" parent="."]
position = Vector2( 975.245, 301.363 )
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy"]
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="Enemy"]
texture = ExtResource( 1 )

[node name="Screwup" type="Timer" parent="Enemy"]
wait_time = 0.2
autostart = true

[node name="PlayerScore" type="Label" parent="."]
margin_left = 19.0
margin_top = 6.0
margin_right = 55.0
margin_bottom = 119.0
custom_fonts/font = SubResource( 4 )
text = "0
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnemyScore" type="Label" parent="."]
margin_left = 968.823
margin_top = 5.19794
margin_right = 1004.82
margin_bottom = 118.198
custom_fonts/font = SubResource( 4 )
text = "0
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -12.0
autoplay = true
[connection signal="area_entered" from="Walls/WallLeft" to="." method="_on_WallLeft_area_entered"]
[connection signal="area_entered" from="Walls/Wallright" to="." method="_on_Wallright_area_entered"]
[connection signal="timeout" from="Enemy/Screwup" to="Enemy" method="_on_Screwup_timeout"]
